force-app/main/default/objects/Document__c/Document__c.object-meta.xml
<CustomObject>
    <description>Object to store documents coming in from Portfolio Management System</description>
    <label>Document</label>
    <nameField>
        <displayFormat>DN-{000000}</displayFormat>
        <label>Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>