force-app/main/default/objects/Document__c/fields/Customer_Notified_At__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notified_At__c</fullName>
    <description>A datetime timestamp of when the customer was notified about the doc</description>
    <inlineHelpText>Time when document details were sent to customer</inlineHelpText>
    <label>Customer Notified At</label>
    <type>DateTime</type>
</CustomField>