force-app/main/default/objects/Document__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>Name of the file uploaded by the Portfolio Manager</description>
    <inlineHelpText>Name of the file uploaded by the Portfolio Manager</inlineHelpText>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>