force-app/main/default/objects/Document__c/fields/Generation_Date__c.field-meta.xml
<CustomField>
    <fullName>Generation_Date__c</fullName>
    <inlineHelpText>Date when was document was generated at the bank</inlineHelpText>
    <label>Generation Date</label>
    <type>Date</type>
</CustomField>