force-app/main/default/objects/Document__c/fields/Product_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Product_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Document linking to specific product subscription</description>
    <label>Product Subscription</label>
    <referenceTo>Product_Subscription__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>